# Pyth-Ion

./: .gitignore  CODEBASE_OVERVIEW.md  CUSUM.md  README.md  TODOS.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build-binaries.yml
PythIon/: Analysis.py  BaseApp.py  CUSUMV3.py  DataTypes.py  Edits.py  IO.py  Painting.py  Pythion.py  Selections.py  __init__.py  __main__.py  __version__.py  cusumv3_1.py  entrypoint.py  filterkit.py  filterkitwidget.py  peaktoolkit.py  peaktoolkitwidget.py  plotguiuniversal.py  tests.py
PythIon/DataTypes/: DataTypes.py  coretypes.py
PythIon/Designer Files/: filterkitwidget.ui  peaktoolkitwidget.ui  plotguiuniversal.ui
PythIon/PythionUtils/: loggers.py  misc.py
PythIon/SpikeTools/: SpikeAnalysis.py  toolstests.py
PythIon/calc/: analysis.py  auto_detect_clears.py  compat.py  cusumv3.py
PythIon/ui/: analysissettings.py  analysissettings.ui  exportevents.py  exportevents.ui  exporttraceselection.py  exporttraceselection.ui  ivselection.py  ivselection.ui  loadfile.py  loadfile.ui  maingui.py  maingui.ui  subeventstatesettings.py  subeventstatesettings.ui
docs/: adding_new_graph.md  codebase_overview.md
scripts/: pyinstaller_build.py  pyinstaller_entry.py  validate_auto_detect_clears.py  validate_real_data_analysis.py
